--- a/unicity_distance.tex
+++ b/unicity_distance.tex
@@ -40,7 +40,7 @@
             \[H(MCK) = H(K) + H(C | K) + H(M | CK) = H(K) + H(C | K), \]
         поскольку
             \[ H(M | CK) = 0. \]
-    \item Предполагается, что для любого $n \leq N$ приближённо выполняется соотношение
+    \item Предполагается, что для любого $n \leq N$ приближённо выполняются соотношения:
         \[ H(C_n | K) \approx \frac{1}{N} H(M), \]
         \[ H(C_1 C_2\dots C_n | K) \approx \frac{n}{N} H(M). \]
 \end{itemize}
