--- a/AES.tex
+++ b/AES.tex
@@ -430,6 +430,6 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 %Если длина блока равна 192 битам $Nb=6$, то ключ 5-го раунда состоит из столбцов $W[24],W[25],W[26],W[27],W[28],W[29].$
 %\exampleend
 
-В настоящее время американский стандарт шифрования AES де-факто используется во всём мире в негосударственных системах передачи данных, если позволяет законодательство страны. C 2010 г. процессоры Intel поддерживают специальный набор инструкций для шифра AES.
+В настоящее время американский стандарт шифрования AES де-факто используется во всём мире в негосударственных системах передачи данных, если позволяет законодательство страны. C 2010 года процессоры Intel поддерживают специальный набор инструкций для шифра AES.
 
 \index{шифр!AES|)}
