--- a/AES.tex
+++ b/AES.tex
@@ -221,7 +221,7 @@ AES -- это раундовый\index{шифр!раундовый} блочны
     \item ключи \emph{раунда} выбираются из \emph{расширенного} ключа по правилу: ключ первого раунда состоит из первых 4-х столбцов матрицы расширенного ключа, второй ключ -- из следующих 4-х столбцов и~т.\,д.
 \end{itemize}
 
-Расширенный ключ -- это матрица $\mathsf{W}$, состоящая из $4 \cdot (\mathsf{Nr} + 1)$ 4-байтных вектор-столбцов, каждый столбец $i$ обозначается $\mathsf{W}[i]$.
+Расширенный ключ -- это матрица $\mathsf{W}$, состоящая из $4(\mathsf{Nr} + 1)$ 4-байтных вектор-столбцов, каждый столбец $i$ обозначается $\mathsf{W}[i]$.
 
 Далее рассматривается только случай, когда ключ шифра состоит из $16$ байтов. Первые $\mathsf{Nk} = 4$ столбца содержат ключ шифра. Остальные столбцы вычисляются рекурсивно из столбцов с меньшими номерами.
 
@@ -236,7 +236,7 @@ AES -- это раундовый\index{шифр!раундовый} блочны
         \FOR{ $i=0$ \TO $\mathsf{Nk} - 1$}
             \STATE $\mathsf{W}[i] = (\mathsf{Key}[4i], ~ \mathsf{Key}[4i+1], ~ \mathsf{Key}[4i+2], ~ \mathsf{Key}[4i+3])^T$;
         \ENDFOR
-        \FOR{ $i = \mathsf{Nk}$ \TO $4 \cdot (\mathsf{Nr} + 1) - 1$}
+        \FOR{ $i = \mathsf{Nk}$ \TO $4(\mathsf{Nr} + 1) - 1$}
             \STATE $\mathsf{temp} = \mathsf{W}[i-1]$;
             \IF{ ($i = 0 \mod \mathsf{Nk}$)}
                 \STATE $\mathsf{temp} = \mathsf{SubWord}(\mathsf{RotWord}(\mathsf{temp})) ~ \oplus ~ \mathsf{Rcon}[i ~/~ \mathsf{Nk}]$;
