--- a/GOST_28147-89.tex
+++ b/GOST_28147-89.tex
@@ -30,7 +30,7 @@
 
 ГОСТ 28147-89 удобен как для аппаратной, так и для программной реализаций.
 
-Алгоритм имеет четыре режима работы. Из них первые три -- режимы шифрования, а последний -- генерирования имитовставки\index{имитовставка} (другие названия: инициализирующий вектор, синхропосылка):
+Алгоритм имеет четыре режима работы:
 \begin{itemize}
     \item простой замены,
     \item гаммирования,
@@ -38,7 +38,6 @@
     \item выработки имитовставки\index{имитовставка}.
 \end{itemize}
 
-
-Подробно данные режимы описаны в следующем разделе.
+Из них первые три -- режимы шифрования, а последний -- генерирования имитовставки\index{имитовставка} (другие названия: инициализирующий вектор, синхропосылка). Подробно данные режимы описаны в следующем разделе.
 
 \index{шифр!ГОСТ 28147-89|)}
