--- a/Cryptanalysis_methods_and_types_of_attacks.tex
+++ b/Cryptanalysis_methods_and_types_of_attacks.tex
@@ -46,7 +46,7 @@
     \item конфиденциальность\index{конфиденциальность} (защита от наблюдения),
     \item целостность\index{целостность} (защита от изменения),
     \item аутентификацию (защита от фальсификации пользователя и сообщений),
-    \item доказательство авторства информации (доказательство авторства и защита от его отрицания);
+    \item доказательство авторства информации (доказательство авторства и защита от его отрицания)
 \end{itemize}
 как со стороны получателя, так и со стороны отправителя.
 
