--- a/GOST_R_34.10-2001.tex
+++ b/GOST_R_34.10-2001.tex
@@ -22,7 +22,7 @@ $A$ формирует открытый ключ следующим образо
         \[ m = n q, ~ 2^{254} < q < 2^{256}, ~ n \geq 1, \]
         где $q$ -- делитель порядка группы.
 
-        В циклической подгруппе порядка $q$ выбирается точка
+        В циклической подгруппе порядка $q$ выбирает точка
         \[ P \in \E(\Z_p): ~ q P \equiv 0. \]
     \item Случайно выбирает число $d$ и вычисляет точку $Q = d P$.
     \item Формирует закрытый и открытый ключи:
