Выбирается -> выбирает и далее по тексту

--- a/GOST_R_34.10-2001.tex
+++ b/GOST_R_34.10-2001.tex
@@ -12,7 +12,7 @@ $A$ формирует открытый ключ следующим образо
         которое определяет группу точек эллиптической кривой $\E(\Z_p)$.
         Выбирает группу, задавая либо случайные числа $0 < a, b < p-1$, либо инвариант $J(E)$:
         \[ J(E) = 1728 \frac{4 a^3}{4 a^3 + 27 b^2} \mod p. \]
-        Если кривая задаётся инвариантом $J(E) \in \Z_p$, то он выбирается случайно в интервале $0 < J(E) < 1728$. Для нахождения $a,b$ вычисляется
+        Если кривая задаётся инвариантом $J(E) \in \Z_p$, то он выбирает случайное в интервале $0 < J(E) < 1728$. Для нахождения $a,b$ вычисляет
         \[ K = \frac{J(E)}{1728 - J(E)}, \]
         \[ \begin{array}{l}
             a = 3 K \mod p, \\
@@ -22,7 +22,7 @@ $A$ формирует открытый ключ следующим образо
         \[ m = n q, ~ 2^{254} < q < 2^{256}, ~ n \geq 1, \]
         где $q$ -- делитель порядка группы.
 
-        В циклической подгруппе порядка $q$ выбирает точка
+        В циклической подгруппе порядка $q$ выбирает точку
         \[ P \in \E(\Z_p): ~ q P \equiv 0. \]
     \item Случайно выбирает число $d$ и вычисляет точку $Q = d P$.
     \item Формирует закрытый и открытый ключи:
