--- a/GOST_R_34.11-94.tex
+++ b/GOST_R_34.11-94.tex
@@ -7,7 +7,7 @@
 \[ \begin{array}{ll}
     X & = X_4 ~\|~ X_3 ~\|~ X_2 ~\|~ X_1 = \\
     & = ~ \eta_{16} ~\|~ \eta_{15} ~\|~ \dots ~\|~ \eta_2 ~\|~ \eta_1 = \\
-    & = ~ \xi_{32} ~\|~ \xi_{31} ~\|~ \dots ~\|~ \xi_2 ~\|~ \xi_1
+    & = ~ \xi_{32} ~\|~ \xi_{31} ~\|~ \dots ~\|~ \xi_2 ~\|~ \xi_1,
 \end{array} \]
 с длинами 64, 16 и 8 бит соответственно.
 
