--- a/GOST_R_34.11-94.tex
+++ b/GOST_R_34.11-94.tex
@@ -30,7 +30,7 @@
     s = i + 4 (k - 1) + 1, ~~ 0 \leq i \leq 3, ~ 1 \leq k \leq 8, \\
     \varphi(s) = 8 i + k. \\
 \end{array} \]
-Приведём пример. Пусть $s = 7$, тогда $i=2, k=2$. Находим перестановку $\varphi(7) = 8 \cdot 2 + 2 = 18$. Седьмой байт переместился на 18-е место.
+Приведём пример. Пусть $s = 7$, тогда $i=2$, $k=2$. Находим перестановку $\varphi(7) = 8 \cdot 2 + 2 = 18$. Седьмой байт переместился на 18-е место.
 
 В российском стандарте функция компрессии двух 256-битовых блоков сообщения $M$ и результата хэширования предыдущего блока $H$ имеет вид
 \[
