Сomma in generators_with_multiple_shift_registers.tex
Деепричастный оборот требует запятой.

--- a/generators_with_multiple_shift_registers.tex
+++ b/generators_with_multiple_shift_registers.tex
@@ -14,4 +14,4 @@
 
 Таким образом, увеличение числа регистров сдвига с обратной связью увеличивает период последовательности.
 
-Одним из способов оценки криптостойкости генератора является оценка длины регистра с линейной обратной связью эквивалентного по порождаемой последовательности. Такой эквивалентный РСЛОС находится с помощью алгоритма Берлекэмпа~---~Мэсси\index{алгоритм!Берлекэмпа~---~Мэсси} декодирования циклических кодов. В лучшем случае длина эквивалентного регистра соизмерима с периодом последовательности, порождённой нелинейным генератором. В общем случае определение эквивалентной длины является сложной задачей.
+Одним из способов оценки криптостойкости генератора является оценка длины регистра с линейной обратной связью, эквивалентного по порождаемой последовательности. Такой эквивалентный РСЛОС находится с помощью алгоритма Берлекэмпа~---~Мэсси\index{алгоритм!Берлекэмпа~---~Мэсси} декодирования циклических кодов. В лучшем случае длина эквивалентного регистра соизмерима с периодом последовательности, порождённой нелинейным генератором. В общем случае определение эквивалентной длины является сложной задачей.
