--- a/groups.tex
+++ b/groups.tex
@@ -4,7 +4,7 @@
 \subsection{Свойства групп}
 
 \emph{Группой}\index{группа} называется множество $\Gr$, на котором задана бинарная операция <<$\circ$>>, удовлетворяющая следующим аксиомам:
-\begin{enumerate}
+\begin{itemize}
     \item замкнутость:
         \[ \forall a,b \in \Gr: a \circ b = c \in \Gr; \]
     \item ассоциативность:
@@ -13,7 +13,7 @@
         \[ \exists ~ e \in \Gr: e\circ a = a \circ e = a; \]
     \item существование обратного элемента:
         \[ \forall a \in \Gr ~ \exists ~ b \in \Gr: a \circ b = b \circ a = e. \]
-\end{enumerate}
+\end{itemize}
 Если
     \[ \forall a,b \in \Gr: a \circ b = b \circ a, \]
 то такую группу называют \emph{коммутативной} (или \emph{абелевой}).
