--- a/definitions.tex
+++ b/definitions.tex
@@ -10,7 +10,7 @@
 	\item \emph{доступность}\index{доступность} -- состояние информации, при котором субъекты, имеющие права доступа, могут реализовать их беспрепятственно.
 \end{itemize}
 
-Другой стандарт ГОСТ Р ИСО/МЭК 13335-1-2006~\cite{GOST-13335-1-2006} определяет \emph{информационную безопасность} как все аспекты, связанные с определением, достижением и поддержанием \emph{конфиденциальности}, \emph{целостности}, \emph{доступности}, \emph{неотказуемости}, \emph{подотчетности}, \emph{аутентичности} и \emph{достоверности} информации или средств ее обработки. То есть в дополнение к предыдущему определению на защиту информации в области информационных технологий возлагаются дополнительные задачи:
+Другой стандарт ГОСТ Р ИСО/МЭК 13335-1-2006~\cite{GOST-13335-1-2006} определяет \emph{информационную безопасность} как все аспекты, связанные с определением, достижением и поддержанием \emph{конфиденциальности}, \emph{целостности}, \emph{доступности}, \emph{неотказуемости}, \emph{подотчётности}, \emph{аутентичности} и \emph{достоверности} информации или средств ее обработки. То есть в дополнение к предыдущему определению на защиту информации в области информационных технологий возлагаются дополнительные задачи:
 \begin{itemize}
 	\item обеспечение \emph{неотказуемости} -- способность удостоверять имевшие место действие или событие так, чтобы эти события или действия не могли быть позже отвергнуты;
 	\item обеспечение \emph{подотчетности} -- способность однозначно прослеживать действия любого логического объекта;
