--- a/aes_math.tex
+++ b/aes_math.tex
@@ -1,7 +1,7 @@
 \section{Конечные поля и операции в алгоритме AES}\index{шифр!AES|(}
 \selectlanguage{russian}
 
-В алгоритме блочного шифрования\index{шифр!блочный} AES преобразования над байтами и битами осуществляются специальными математическими операциями. Биты и байты понимаются как элементы поля.
+В алгоритме блочного шифрования\index{шифр!блочный} AES преобразования над битами и байтами осуществляются специальными математическими операциями. Биты и байты понимаются как элементы поля.
 
 \subsection{Операции с байтами в AES}
 
