--- a/aes_math.tex
+++ b/aes_math.tex
@@ -10,7 +10,7 @@
 преобразуется в многочлен $a(x)$ с коэффициентами 0 или 1 по правилу
     \[ a(x) = a_{7}x^{7}+a_{6}x^{6}+a_{5}x^{5}+a_{4}x^{4}+a_{3}x^{3}+a_{2}x^{2}+a_{1}x+a_{0}. \]
 
-Далее байт трактуется как элемент конечного поля $\GF{2^8}$, заданного неприводимым многочленом
+Далее байт трактуется как элемент конечного поля $\GF{2^8}$, заданного неприводимым многочленом, например
     \[ m(x) = x^{8}+x^{4}+x^{3}+x +1. \]
 
 Произведение многочленов $a(x)$ и $b(x)$ по модулю многочлена $m(x)$ записывают как
