--- a/aes_math.tex
+++ b/aes_math.tex
@@ -40,7 +40,7 @@
 В алгоритме блочного шифрования AES байты рассматриваются как элементы поля Галуа $\GF{2^8}$. Сложим байты $\mathrm{'57'}$ и $\mathrm{'83'}$. Представляя их многочленами, находим
     \[ (x^6 + x^4 + x^2 + x + 1) + (x^7 + x + 1) = x^7 + x^6 + x^4 + x^2, \]
 или в двоичной записи --
-    \[ 01010111 \oplus 10000011 = 11010100 = \mathrm{'D4'}. \]
+    \[ \mathrm{'01010111'} \oplus \mathrm{'10000011'} = \mathrm{'11010100'} = \mathrm{'D4'}. \]
 Получили $\mathrm{'57'} + \mathrm{'83'} = \mathrm{'D4'}$.
 \exampleend
 
@@ -48,7 +48,7 @@
 Выполним в поле $\GF{2^8}$, заданном неприводимым многочленом
     \[ m(x) = x^8 + x^4 + x^3 + x + 1 \]
 (из алгоритма AES), операции с байтами: $\mathrm{'FA'} \cdot \mathrm{'A9'} + \mathrm{'E0'}$, где
-    \[ FA = 11111010, ~ A9 = 10101001, ~ E0 = 11100000, \]
+    \[ \mathrm{'FA'} = \mathrm{'11111010'}, ~ \mathrm{'A9'} = \mathrm{'10101001'}, ~ \mathrm{'E0'} = \mathrm{'11100000'}, \]
     \[ (x^7 + x^6 + x^5 + x^4 + x^3  +x)(x^7 + x^5 + x^3 + 1) + (x^7 + x^6 + x^5) \mod m(x) = \]
     \[ = x^{14} + x^{13} + x^{10} + x^{8} + x^7 + x^3 + x \mod m(x) = \]
     \[ = (x^{14} + x^{13} + x^{10} + x^{8} + x^7 + x^3 + x) + x^6 \cdot m(x) \mod m(x) = \]
