--- a/GOST_R_34.11-2012.tex
+++ b/GOST_R_34.11-2012.tex
@@ -61,6 +61,6 @@
 
 Новый алгоритм, согласно отдельным исследованиям, до полутора раз быстрее предыдущего стандарта ГОСТ Р 34.11-94\index{хэш-функция!ГОСТ Р 34.11-94}, используя 27 тактов на один байт входного сообщения (94~МБ/с), против 40 для старого стандарта (64~МБ/с)\footnote{Реализации тестировались на процессоре Intel Core i7-920 CPU @ 2.67~GHz и видеокарте NVIDIA GTX 580. См.~\cite{Lebedev:2013}.}.
 
-В 2014 году группа исследователей (\cite{Guo:Jean:Leurent:Peyrin:Wang:2014}) обнаружила недостаток в реализации конструкции HAIFA в хэш-функции <<Стрибог>>, который ведёт к уменьшению сложности атаки по поиску второго прообраза до $n \times 2^{n/2}$, то есть до $2^{266}$. Авторы работы получили первую премию в размере пятьсот тысяч рублей на конкурсе по исследованию хэш-функции «Стрибог», проводившимся Российским Техническим комитетом по стандартизации «Криптографическая защита информации» (ТК~26) при участии Академии криптографии Российской Федерации и при организационной и финансовой поддержке ОАО «ИнфоТеКС».
+В 2014 году группа исследователей (\cite{Guo:Jean:Leurent:Peyrin:Wang:2014}) обнаружила недостаток в реализации конструкции HAIFA в хэш-функции <<Стрибог>>, который ведёт к уменьшению сложности атаки по поиску второго прообраза до $n \times 2^{n/2}$, то есть до $2^{266}$. Авторы работы получили первую премию в размере пятисот тысяч рублей на конкурсе по исследованию хэш-функции «Стрибог», проводившимся Российским Техническим комитетом по стандартизации «Криптографическая защита информации» (ТК~26) при участии Академии криптографии Российской Федерации и при организационной и финансовой поддержке ОАО «ИнфоТеКС».
 
 \index{хэш-функция!«Стрибог»|)}
