Improve groups_of_ec_points_over_finite_fields.tex
3 слова "точка", тавтология.

--- a/groups_of_ec_points_over_finite_fields.tex
+++ b/groups_of_ec_points_over_finite_fields.tex
@@ -122,7 +122,7 @@
                 \dfrac{3 x_1^2 + a}{2 y_1} \mod p, & \text{ если } P = Q. \\
             \end{cases}
         \]
-    \item Сложение точки $P=(x,y)$ c противоположной точкой \\
+    \item Сложение точки $P=(x,y)$ c противоположной \\
         $(-P) = (x,-y)$ даёт точку в бесконечности $O$:
         \begin{gather*}
           P + (-P) = O, \\
