--- a/cookies_auth.tex
+++ b/cookies_auth.tex
@@ -16,7 +16,7 @@
 \begin{center} \begin{verbatim}
 GET /index.html HTTP/1.1
 Host: www.wikipedia.org
-Accept: */*
+Accept: */*.
 \end{verbatim} \end{center}
 
 В заголовок ответа сервера веб-приложение может добавить заголовок \texttt{Set-Cookie}, который содержит новые значения cookie:
@@ -25,7 +25,7 @@ HTTP/1.1 200 OK
 Content-type: text/html
 Set-Cookie: name1=value1; name2=value2; ...
 
-...далее HTML-страница...
+...далее HTML-страница....
 \end{verbatim} \end{center}
 
 Браузер, если это разрешено настройками, при последующих запросах к веб-серверу автоматически будет отсылать cookie назад веб-приложению:
@@ -33,7 +33,7 @@ Set-Cookie: name1=value1; name2=value2; ...
 GET /wiki/HTTP_cookie HTTP/1.1
 Host: www.wikipedia.org
 Cookie: name1=value1; name2=value2; ...
-Accept: */*
+Accept: */*.
 \end{verbatim} \end{center}
 
 Далее веб-приложение может создать новый cookie, изменить значение старого и~т.\,д. Браузер хранит cookie на устройстве клиента. То есть cookie -- это возможность хранить переменные на устройстве клиента, отсылать сохранённые значения, получать новые переменные. В результате создаётся передача состояний, что даёт возможность не вводить логин и пароль каждый раз при входе в интернет-сервис, использовать несколько окон для одного сеанса работы в интернет-магазине и~т.\,д. При создании cookie может указываться его конечное время действия, после которого браузер удалит устаревший cookie.
