--- a/diffie-hellman.tex
+++ b/diffie-hellman.tex
@@ -42,8 +42,8 @@
     \item На завершающем третьем этапе стороны вычисляют:
         \begin{enumerate}
             \item $A: ~ K_A = (g^{yz})^x = g^{xyz} \mod p$.
-            \item $B: ~ K_A = (g^{zx})^y = g^{xyz} \mod p$.
-            \item $C: ~ K_A = (g^{xy})^z = g^{xyz} \mod p$.
+            \item $B: ~ K_B = (g^{zx})^y = g^{xyz} \mod p$.
+            \item $C: ~ K_C = (g^{xy})^z = g^{xyz} \mod p$.
         \end{enumerate}
 \end{enumerate}
 
