--- a/rsa.tex
+++ b/rsa.tex
@@ -106,7 +106,7 @@
     \item $A$ посылает $B$ сообщение в виде $(m, s)$, где $m$ -- открытый текст, $s$ -- подпись.
     \item $B$ принимает сообщение $(m, s)$, возводит $s$ в степень $e$ по модулю $n$ ($e, n$ -- часть открытого ключа). В результате вычислений $B$ получает открытый текст
         \[ s^{e} \mod n = \left( m^{d} \mod n \right)^{e} \mod n = m. \]
-    \item Сравнивает полученное значение с первой частью сообщения. При полном совпадении подпись принимается.
+    \item $B$ cравнивает полученное значение с первой частью сообщения. При полном совпадении подпись принимается.
 \end{enumerate}
 Недостаток этой системы создания ЭП состоит в том, что подпись $m^{d} \mod n$ имеет большую длину, равную длине открытого сообщения $m$.
 
